06-07-2004 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:		Added a display formatting tab to the preferences menu.
	* glade/gmpc.glade:		preferences window is now resizable.
	* src/main.h:			Added a string to the preferences struct for markup_playlist and markup_song_browser
	* src/config.c:			Saving/loading of format string for playlist/browser
	* src/preferences.c:		editing of formatting song/display/playlist.
	* src/preferences.c:		Last updated label now tracks database changes aswell. (uses last_db from song-browser.)
	* glade/gmpc.glade:		Added update dbase stuff.
	* added TODO file.
	* glade/playlist.glade:	Added tooltip to find,close and add.
	* src/playlist2.c:	del signals only cought when tree in focus, you can now use del to clear search window.
	* src/playlist2.c:	unselect after delete
	* src/playlist2.c:	Unselect after crop.
	
05-07-2004 Qball <Qball@qballcow.nl>
	* src/playlist2.c/glade/playlist.glade: Added context menu to the playlist.
	* src/playlist2.c: added shuffle/clear and crop function.
04-07-2004 Qball <Qball@qballcow.nl>
	* src/misc.c:	Replace _ with a space
	* po/fr.po:	Added french translation (thanks goes to Mathieu
	Doidy)

03-07-2004 Qball <Qball@qballcow>
	* Added translation support
	* src/playlist.c:	Added a function to open/popup the filter and show filtered list.
	* src/id3info.c: Uses new playlist for filter function.
	* glade/gmpc.glade: Removed search album button in id3info window.
	* src/id3info.c: removed find_album()
	* src/id3info.c: show stream name in album field.
	* main/main.c: when updating database show message in song-title window

02-07-2004 Qball <Qball@qballcow.nl>
	* Removed code in tray_icon.c that set an non-existing widget
	sensitive
	* Catch key presses on tree store
	* If del is pressed when playlist selected or search query remove
	them.
	* ctrl-l gives focus to search-entry
	* Made the button layout smaller.
	* Added confirmation dialog to deleting playlist/search query from
	del key.