@@ -347,17 +347,17 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkButton" id="button36">
+		<widget class="GtkToggleButton" id="tb_pl2">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Open the playlist</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
-		  <signal name="clicked" handler="create_playlist2" last_modification_time="Mon, 21 Jun 2004 12:04:12 GMT"/>
-		  <accelerator key="p" modifiers="0" signal="clicked"/>
+		  <property name="active">False</property>
+		  <property name="inconsistent">False</property>
+		  <signal name="toggled" handler="toggle_playlist2" last_modification_time="Thu, 08 Jul 2004 14:53:56 GMT"/>
 
 		  <child>
-		    <widget class="GtkImage" id="image61">
+		    <widget class="GtkImage" id="image69">
 		      <property name="visible">True</property>
 		      <property name="stock">gtk-justify-fill</property>
 		      <property name="icon_size">4</property>
